--- a/layout-puro/style.css
+++ b/layout-puro/style.css
@@ -1,3 +1,12 @@
+/* 
+  Breakpoints
+  960
+
+  740
+
+*/
+
+
 /*Reset*/
 * {
   box-sizing: border-box;
@@ -52,6 +61,21 @@ body {
   font-size: 1.125em ;
 }
 
+@media (max-width: 739px) {
+  .menu {
+    text-align: center;
+  }
+  a.menu-logo {
+    float: none;
+    margin: 0 auto;
+  }
+  .menu-nav {
+    float: none;
+    clear: both;
+  }
+}
+
+/* Intro */
 .intro {
   background: url('../img/bg-intro.jpg') no-repeat center center;
   background-size: cover;
@@ -79,9 +103,13 @@ body {
   font-size: 1.125em;
 }
 
+@media (max-width: 739px) {
+  .intro {
+    padding: 60px 0;
+  }
+}
 
 /* Sobre */
-
 .sobre {
   padding: 60px;
 }
@@ -137,6 +165,24 @@ body {
   max-width: 460px;
 }
 
+@media (min-width: 740px) and (max-width: 980px){
+  .sobre-container {
+    max-width: 720px;
+  }
+  .sobre-item {
+    width: 340px;
+  }
+}
+
+@media (max-width: 739px) {
+  .sobre-container {
+    width: 300px;
+  }
+  .sobre-item {
+    width: 300px;
+    margin: 0 auto;
+  }
+}
 
 /* Produtos */
 .produtos {
@@ -212,6 +258,24 @@ body {
   margin: 20px auto 0 auto;
 }
 
+@media (min-width: 740px) and (max-width: 980px){
+  .produtos-container {
+    max-width: 720px;
+  }
+  .produtos-item {
+    width: 220px;
+  }
+}
+
+@media (max-width: 739px) {
+  .produtos-container {
+    width: 300px;
+  }
+  .produtos-item {
+    margin: 0 auto 20px auto;
+  }
+}
+
 /* Locais */
 
 .locais {
@@ -262,6 +326,25 @@ body {
   border: 3px solid;
   color: #252525;
   padding: 10px 20px;
+}
+
+@media (min-width: 740px) and (max-width: 980px){
+  .locais {
+    max-width: 720px;
+  }
+  .locais-item > div, .locais-item img {
+    width: 340px;
+  }
+}
+
+@media (max-width: 739px) {
+  .locais {
+    width: 300px;
+  }
+  .locais-item > div, .locais-item img {
+    width: 300px;
+    margin: 0px;
+  }
 }
 
 /* Assine */
@@ -329,6 +412,25 @@ body {
   cursor: pointer;
 }
 
+@media (min-width: 740px) and (max-width: 980px){
+  .assine-container {
+    max-width: 720px;
+  }
+  .assine-info, .assine form, .assine input {
+    width: 340px;
+  }
+}
+
+@media (max-width: 739px) {
+  .assine-container {
+    max-width: 300px;
+  }
+  .assine-info, .assine form, .assine input {
+    width: 300px;
+    margin: 10px 0 0;
+  }
+}
+
 /* footer */
 .footer {
   background: #d6d3c8;
@@ -357,4 +459,18 @@ body {
   float: right;
   margin: 0 10px;
   display: block;
+}
+
+@media (max-width: 739px) {
+  .footer-container {
+    max-width: 300px;
+  }
+  .footer p {
+    float: none;
+    margin: 0px;;
+  }
+  .footer img {
+    float: none;
+    margin: 20px 0;
+  }
 }
